--- a/Middleware Exercise/public/css/app.css
+++ b/Middleware Exercise/public/css/app.css
@@ -20,6 +20,7 @@ header {
     margin: 0 auto; 
     flex: 1; 
 }
+
 .header-roadmap-title {
     margin-top: 80px;
 }
@@ -38,7 +39,22 @@ h2 {
     margin-bottom: 10px;
 }
 
+h3 {
+    font-size: 20px;
+    color: white;
+    margin-bottom: 10px;
+    text-align: center;
+}
 
+.container1 {
+    border: 2px solid #000; 
+    padding: 20px;          
+    background-color: rgba(82, 197, 217, 0.907);
+    border-radius: 5px;     
+    max-width: 600px;       
+    margin: 0 auto;
+    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.1);
+}
 
 ul.toc {
     list-style-type: none;
